* fixed sysmanager icons vertical alignment

--- a/asset/css/extensions.css
+++ b/asset/css/extensions.css
@@ -29,7 +29,7 @@
 	background-position:0 -26px;
 }
 #extension-tabs li.update span.icon {
-	background-position:0 -686px;
+	background-position:0 -687px;
 }
 #extension-tabs li.search span.icon {
 	background-position:0 -836px;
@@ -124,7 +124,7 @@ div.state dd {
 	background-position:0 -58px;
 }
 .extlist td.edit a.install {
-	background-position:0 -30px;
+	background-position:0 -29px;
 }
 .extlist td.edit a.remove {
 	background-position:0 -660px;
